--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,48 @@
-<div>{{ title }}</div>
-
-<button (click)="getData()">click</button>
-
-<div>{{ data }}</div>
+<div class="main-container">
+  <header class="header-6">
+    <div class="branding">
+      <a href="" class="nav-link">
+        <span class="title">SHOPPERS</span>
+      </a>
+    </div>
+    <div class="header-actions">
+      <clr-dropdown>
+        <button class="nav-text" clrDropdownTrigger aria-label="open user profile">
+          Your Name
+          <cds-icon shape="angle" direction="down"></cds-icon>
+        </button>
+        <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
+          <a href="/accountSetting" clrDropdownItem>Preferences</a>
+          <a href="/accountSetting" clrDropdownItem>Log out</a>
+        </clr-dropdown-menu>
+      </clr-dropdown>
+    </div>
+  </header>
+  <div class="content-container">
+    <clr-vertical-nav [clrVerticalNavCollapsible]="true" [clrVerticalNavCollapsed]="false">
+      <a clrVerticalNavLink routerLink="/stores" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="store"></cds-icon>
+        Stores
+      </a>
+      <a clrVerticalNavLink routerLink="/searchResult" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="search"></cds-icon>
+        Search Result
+      </a>
+      <a clrVerticalNavLink routerLink="/cart" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="shopping-cart"></cds-icon>
+        Cart
+      </a>
+      <a clrVerticalNavLink routerLink="/bestDeal" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="happy-face"></cds-icon>
+        Best Deal
+      </a>
+      <a clrVerticalNavLink routerLink="/accountSetting" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="cog"></cds-icon>
+        Account Setting
+      </a>
+    </clr-vertical-nav>
+    <div class="content-area">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
