--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,20 @@
 <div class="main-container">
   <header class="header-6">
     <div class="branding">
-      <a href="" class="nav-link">
+      <a href="..." class="nav-link">
+        <cds-icon shape="vm-bug"></cds-icon>
         <span class="title">SHOPPERS</span>
       </a>
     </div>
+    <form class="search">
+      <label for="search_input">
+        <input id="search_input" type="text" placeholder="Search for products or stores..." />
+      </label>
+    </form>
     <div class="header-actions">
       <clr-dropdown>
         <button class="nav-text" clrDropdownTrigger aria-label="open user profile">
-          Your Name
+          Jone Doe
           <cds-icon shape="angle" direction="down"></cds-icon>
         </button>
         <clr-dropdown-menu *clrIfOpen clrPosition="bottom-right">
