--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,10 @@
         <cds-icon clrVerticalNavIcon shape="happy-face"></cds-icon>
         Best Deal
       </a>
+      <a clrVerticalNavLink routerLink="/faqBoard" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="pinboard"></cds-icon>
+        FAQs
+      </a>
       <a clrVerticalNavLink routerLink="/accountSetting" routerLinkActive="active">
         <cds-icon clrVerticalNavIcon shape="cog"></cds-icon>
         Account Setting
