Adds form module

--- a/src/app/faq-board/faq-board.component.html
+++ b/src/app/faq-board/faq-board.component.html
@@ -7,6 +7,8 @@
 </div>
 <br />
 
+<form [formGroup]="faqForm">
+
 <clr-datagrid>
 
     <clr-dg-column>User ID</clr-dg-column>
@@ -22,3 +24,5 @@
     </clr-dg-row>
   
   </clr-datagrid>
+
+</form>
