--- a/src/app/faq-board/faq-board.component.html
+++ b/src/app/faq-board/faq-board.component.html
@@ -7,25 +7,41 @@
       <input clrInput placeholder="Enter the keyword" id="keyword" name="keyword" [formControlName]="'keyword'" />
       <div style="margin: 8px 0 0 5px;"><button class="btn btn-primary" (click)="searchDisplayInitialPage()">Search</button></div>
 </div>
-<div *ngIf="faqForm.controls['keyword'].getError('required') && (faqForm.get('keyword')?.dirty || faqForm.get('keyword')?.touched)" style="color: red;">
+<div *ngIf="faqForm.controls['keyword'].getError('required') && (faqForm.get('keyword')?.dirty || faqForm.get('keyword')?.touched)" class="alert">
   * This field is required
 </div>
   
 <br />
 
-<clr-datagrid>
+<clr-datagrid class="clr-col-12" (clrDgRefresh)="refresh($event)" [clrDgSelected]="faqDatagrid.selections.itemsSelected" 
+  (clrDgSelectedChange)="selectionChanged($event)" [clrDgPreserveSelection]="true">
 
-    <clr-dg-column>User ID</clr-dg-column>
-    <clr-dg-column>Name</clr-dg-column>
-    <clr-dg-column>Creation date</clr-dg-column>
-    <clr-dg-column>Favorite color</clr-dg-column>
+    <clr-dg-column class="clr-col-3" [clrDgField]="'compositeKey'" [clrDgSortOrder]="faqDatagrid.sorts['compositeKey']" 
+    [(clrFilterValue)]="faqDatagrid.filters['compositeKey']">compositeKey</clr-dg-column>
 
-    <clr-dg-row *ngFor="let item of itemsDataGrid">
-      <clr-dg-cell>{{ item.compositeKey }}</clr-dg-cell>
-      <clr-dg-cell>{{ item.levelName }}</clr-dg-cell>
-      <clr-dg-cell>{{ item.editTime }}</clr-dg-cell>
-      <clr-dg-cell>{{ item.businessId }}</clr-dg-cell>
+    <clr-dg-column class="clr-col-3" [clrDgField]="'levelName'" [clrDgSortOrder]="faqDatagrid.sorts['levelName']" 
+    [(clrFilterValue)]="faqDatagrid.filters['levelName']">levelName</clr-dg-column>
+
+    <clr-dg-column class="clr-col-3" [clrDgField]="'editTime'" [clrDgSortOrder]="faqDatagrid.sorts['editTime']" 
+    [(clrFilterValue)]="faqDatagrid.filters['editTime']">editTime</clr-dg-column>
+    
+    <clr-dg-column class="clr-col-3" [clrDgField]="'businessId'" [clrDgSortOrder]="faqDatagrid.sorts['businessId']" 
+    [(clrFilterValue)]="faqDatagrid.filters['businessId']">level</clr-dg-column>
+
+
+    <clr-dg-row *ngFor="let item of itemsDataGrid" [clrDgItem]="item" [clrDgSelected]="item.selected" ><!-- [routerLink]="['/stores']"  -->
+      <clr-dg-cell class="clr-col-3">{{ item.compositeKey }}</clr-dg-cell>
+      <clr-dg-cell class="clr-col-3">{{ item.levelName }}</clr-dg-cell>
+      <clr-dg-cell class="clr-col-3">{{ item.editTime }}</clr-dg-cell>
+      <clr-dg-cell class="clr-col-3">{{ item.businessId }}</clr-dg-cell>
     </clr-dg-row>
+
+    <clr-dg-footer>
+      <clr-dg-pagination #pagination [clrDgPageSize]="faqDatagrid.numItemsPerPage" [(clrDgPage)]="faqDatagrid.currentPage" [clrDgTotalItems]="numItemsTotal">
+        <clr-dg-page-size [clrPageSizeOptions]="[1,10,20,50,100]">Entries per page</clr-dg-page-size>
+      {{pagination.firstItem + 1}} - {{pagination.lastItem + 1}} of {{pagination.totalItems}} entries
+      </clr-dg-pagination>
+      </clr-dg-footer>
   
   </clr-datagrid>
 
