--- a/src/app/best-deal/best-deal.component.html
+++ b/src/app/best-deal/best-deal.component.html
@@ -1,2 +1,198 @@
 <h2>Best Deals</h2>
-<br /><hr /><br />
+<br /><hr />
+
+<div class="clr-row clr-col-12">
+    <div class="clr-col-12">
+      <div class="card">
+        <h3 class="card-header">Header</h3>
+        <div class="card-block">
+          <h4 class="card-title">Block</h4>
+          <div class="card-text">...</div>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-sm btn-link">Footer Action 1</button>
+          <button class="btn btn-sm btn-link">Footer Action 2</button>
+        </div>
+      </div>
+    </div>
+</div>
+
+<div class="clr-row clr-col-12">
+
+    <div class="clr-col-3">
+      <div class="card">
+        <h3 class="card-header">Header</h3>
+        <div class="card-block">
+          <h4 class="card-title">Block</h4>
+          <div class="card-text">...</div>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-sm btn-link">Footer Action 1</button>
+          <button class="btn btn-sm btn-link">Footer Action 2</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+  </div>
+
+  <div class="clr-row">
+
+    <div class="clr-col-3">
+      <div class="card">
+        <h3 class="card-header">Header</h3>
+        <div class="card-block">
+          <h4 class="card-title">Block</h4>
+          <div class="card-text">...</div>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-sm btn-link">Footer Action 1</button>
+          <button class="btn btn-sm btn-link">Footer Action 2</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+  </div>
+
+  <div class="clr-row">
+
+    <div class="clr-col-3">
+      <div class="card">
+        <h3 class="card-header">Header</h3>
+        <div class="card-block">
+          <h4 class="card-title">Block</h4>
+          <div class="card-text">...</div>
+        </div>
+        <div class="card-footer">
+          <button class="btn btn-sm btn-link">Footer Action 1</button>
+          <button class="btn btn-sm btn-link">Footer Action 2</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="clr-col-3">
+        <div class="card">
+          <h3 class="card-header">Header</h3>
+          <div class="card-block">
+            <h4 class="card-title">Block</h4>
+            <div class="card-text">...</div>
+          </div>
+          <div class="card-footer">
+            <button class="btn btn-sm btn-link">Footer Action 1</button>
+            <button class="btn btn-sm btn-link">Footer Action 2</button>
+          </div>
+        </div>
+      </div>
+
+  </div>
