Adds API service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
       <label for="search_input">
         <input id="search_input" type="text" placeholder="Search for products or stores..." />
       </label>
+      <div style="margin: 8px 0 0 5px;"><button class="btn btn-primary" (click)="getItems()">Search</button></div>
     </form>
     <div class="header-actions">
       <clr-dropdown>
