--- a/src/app/stores/stores.component.html
+++ b/src/app/stores/stores.component.html
@@ -19,9 +19,10 @@
 
 <div class="clr-row clr-col-12">
 
-    <div class="clr-col-3">
+
+    <div class="clr-col-3" *ngFor="let store of stores">
       <div class="card">
-        <h3 class="card-header">Header</h3>
+        <h3 class="card-header">{{ store.name }}</h3>
         <div class="card-block">
           <h4 class="card-title">Block</h4>
           <div class="card-text">...</div>
@@ -33,166 +34,7 @@
       </div>
     </div>
 
-    <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
 
   </div>
 
-  <div class="clr-row">
-
-    <div class="clr-col-3">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-  </div>
-
-  <div class="clr-row">
-
-    <div class="clr-col-3">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-  </div>
+  
