--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,18 +31,18 @@
         <cds-icon clrVerticalNavIcon shape="store"></cds-icon>
         Stores
       </a>
-      <a clrVerticalNavLink routerLink="/searchResult" routerLinkActive="active">
-        <cds-icon clrVerticalNavIcon shape="search"></cds-icon>
-        Search Result
+      <a clrVerticalNavLink routerLink="/bestDeal" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="happy-face"></cds-icon>
+        Best Deal
       </a>
       <a clrVerticalNavLink routerLink="/cart" routerLinkActive="active">
         <cds-icon clrVerticalNavIcon shape="shopping-cart"></cds-icon>
         Cart
       </a>
-      <a clrVerticalNavLink routerLink="/bestDeal" routerLinkActive="active">
-        <cds-icon clrVerticalNavIcon shape="happy-face"></cds-icon>
-        Best Deal
-      </a>
+      <!-- <a clrVerticalNavLink routerLink="/searchResult" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="search"></cds-icon>
+        Search Result
+      </a> -->
       <a clrVerticalNavLink routerLink="/faqBoard" routerLinkActive="active">
         <cds-icon clrVerticalNavIcon shape="pinboard"></cds-icon>
         FAQs
