Adds more layouts

--- a/src/app/account-setting/account-setting.component.html
+++ b/src/app/account-setting/account-setting.component.html
@@ -4,15 +4,35 @@
 <div class="clr-row clr-col-12">
     <div class="clr-col-12">
       <div class="card">
-        <h3 class="card-header">Header</h3>
+        <h3 class="card-header">Account Information</h3>
         <div class="card-block">
-          <h4 class="card-title">Block</h4>
+          <h4 class="card-title">Email</h4>
           <div class="card-text">...</div>
         </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
+        <div class="card-block">
+          <h4 class="card-title">Password</h4>
+          <div class="card-text">...</div>
         </div>
       </div>
     </div>
+</div>
+
+<div class="clr-row clr-col-12">
+  <div class="clr-col-12">
+    <div class="card">
+      <h3 class="card-header">Personal Information</h3>
+      <div class="card-block">
+        <h4 class="card-title">Name</h4>
+        <div class="card-text">...</div>
+      </div>
+      <div class="card-block">
+        <h4 class="card-title">Phone</h4>
+        <div class="card-text">...</div>
+      </div>
+      <div class="card-block">
+        <h4 class="card-title">Address</h4>
+        <div class="card-text">...</div>
+      </div>
+    </div>
+  </div>
 </div>
