--- a/src/app/best-deal/best-deal.component.html
+++ b/src/app/best-deal/best-deal.component.html
@@ -2,197 +2,20 @@
 <br /><hr />
 
 <div class="clr-row clr-col-12">
-    <div class="clr-col-12">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
+  <div class="clr-col-3" *ngFor="let item of items">
+    <div class="card">
+      <h3 class="card-header">{{ item.name }}</h3>
+      <div class="card-block flex clr-col-12">
+          <div class="card-text"><img [src]="item.image" class="image" /></div>
+          <div class="card-text card-right">
+            <div class="card-title">Store: <b>{{ item.vendor.name }}</b></div>
+            <div class="card-title">Price: <span class="strike-italic">${{ item.price }}</span>&nbsp;<b>${{ item.price }}</b></div>
+          </div>
+      </div>
+      <div class="card-footer clr-col-12">
+        <button class="btn btn-sm btn-link">[View Details]</button>
+        <button class="btn btn-sm btn-link">[Add to Cart]</button>
       </div>
     </div>
+  </div>
 </div>
-
-<div class="clr-row clr-col-12">
-
-    <div class="clr-col-3">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-  </div>
-
-  <div class="clr-row">
-
-    <div class="clr-col-3">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-  </div>
-
-  <div class="clr-row">
-
-    <div class="clr-col-3">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="clr-col-3">
-        <div class="card">
-          <h3 class="card-header">Header</h3>
-          <div class="card-block">
-            <h4 class="card-title">Block</h4>
-            <div class="card-text">...</div>
-          </div>
-          <div class="card-footer">
-            <button class="btn btn-sm btn-link">Footer Action 1</button>
-            <button class="btn btn-sm btn-link">Footer Action 2</button>
-          </div>
-        </div>
-      </div>
-
-  </div>
