--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -2,18 +2,21 @@
 <br /><hr />
 
 <div class="clr-row clr-col-12">
-    <div class="clr-col-12">
-      <div class="card">
-        <h3 class="card-header">Header</h3>
-        <div class="card-block">
-          <h4 class="card-title">Block</h4>
-          <div class="card-text">...</div>
-        </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
-        </div>
+  <div class="clr-col-12">
+    <div class="card">
+      <h3 class="card-header">Items in your Store Cart</h3>
+      <div class="card-block">
+        <h4 class="card-title">Item 1</h4>
+        <div class="card-text">...</div>
+      </div>
+      <div class="card-block">
+        <h4 class="card-title">Item 2</h4>
+        <div class="card-text">...</div>
+      </div>
+      <div class="card-block">
+        <h4 class="card-title">Item 3</h4>
+        <div class="card-text">...</div>
       </div>
     </div>
+  </div>
 </div>
-
