--- a/src/app/stores/stores.component.html
+++ b/src/app/stores/stores.component.html
@@ -16,16 +16,16 @@
     <div class="clr-col-3" *ngFor="let store of stores">
       <div class="card">
         <h3 class="card-header">{{ store.name }}</h3>
-        <div class="card-block flex">
-            <div class="card-text"><img [src]="store.image" class="image"></div>
+        <div class="card-block flex clr-col-12">
+            <div class="card-text"><img [src]="store.image" class="image" /></div>
             <div class="card-text card-right">
               <span class="card-title"><b>{{ store.name }}</b></span>
               <div><i>Open until {{ store.openUntil | date: 'shortTime'}}</i></div>
             </div>
         </div>
-        <div class="card-footer">
-          <button class="btn btn-sm btn-link">Footer Action 1</button>
-          <button class="btn btn-sm btn-link">Footer Action 2</button>
+        <div class="card-footer clr-col-12">
+          <button class="btn btn-sm btn-link">[Shop]</button>
+          <button class="btn btn-sm btn-link">[View Cart]</button>
         </div>
       </div>
     </div>
