--- a/src/app/stores/stores.component.html
+++ b/src/app/stores/stores.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="card-footer clr-col-12">
-          <button class="btn btn-sm btn-link">[Shop]</button>
+          <button class="btn btn-sm btn-link" routerLink="/shop">[Shop]</button>
           <button class="btn btn-sm btn-link">[View Cart]</button>
         </div>
       </div>
