--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -13,6 +13,9 @@
               <div class="card-title">Event: <b>{{ item.price }}</b></div>
             </div>
         </div>
+        <div class="card-footer clr-col-12">
+          <button class="btn btn-sm btn-primary">Add to Cart</button>
+        </div>
       </div>
     </div>
   </div>
