--- a/src/app/stores/stores.component.html
+++ b/src/app/stores/stores.component.html
@@ -24,8 +24,8 @@
             </div>
         </div>
         <div class="card-footer clr-col-12">
-          <button class="btn btn-sm btn-link" routerLink="/shop">[Shop]</button>
-          <button class="btn btn-sm btn-link">[View Cart]</button>
+          <button class="btn btn-sm btn-primary" routerLink="/shop">Shop Items</button>
+          <button class="btn btn-sm btn-primary">View Shop Cart</button>
         </div>
       </div>
     </div>
