--- a/src/app/best-deal/best-deal.component.html
+++ b/src/app/best-deal/best-deal.component.html
@@ -13,8 +13,7 @@
           </div>
       </div>
       <div class="card-footer clr-col-12">
-        <button class="btn btn-sm btn-link">[View Details]</button>
-        <button class="btn btn-sm btn-link">[Add to Cart]</button>
+        <button class="btn btn-sm btn-primary">Add to Cart</button>
       </div>
     </div>
   </div>
