--- a/src/app/best-deal/best-deal.component.html
+++ b/src/app/best-deal/best-deal.component.html
@@ -5,11 +5,14 @@
   <div class="clr-col-3" *ngFor="let item of items">
     <div class="card">
       <h3 class="card-header">{{ item.name }}</h3>
+      <div class="event" *ngIf="item.event">{{ item.event.name }} Event</div>
+      <div class="event" *ngIf="item.event">{{ item.event.start_date | date: 'yyyy-MM-dd' }} ~ {{ item.event.end_date | date: 'yyyy-MM-dd' }}</div>
       <div class="card-block flex clr-col-12">
           <div class="card-text"><img [src]="item.image" class="image" /></div>
           <div class="card-text card-right">
-            <div class="card-title">Store: <b>{{ item.vendor.name }}</b></div>
-            <div class="card-title">Price: <span class="strike-italic">${{ item.price }}</span>&nbsp;<b>${{ item.price }}</b></div>
+            <div class="card-title">Store: {{ item.vendor.name }}</div>
+            <div class="card-title">Price: <span class="strike-italic">${{ item.price }}</span>&nbsp;${{ item.price }}</div>
+            <div class="card-title">Weight: {{ item.weight }}</div>
           </div>
       </div>
       <div class="card-footer clr-col-12">
