Adds products by store

--- a/src/app/stores/stores.component.html
+++ b/src/app/stores/stores.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="card-footer clr-col-12">
-          <button class="btn btn-sm btn-primary" (click)="goToShop()">Shop Items</button>
+          <button class="btn btn-sm btn-primary" (click)="goToShop(store)">Shop Items</button>
           <button class="btn btn-sm btn-primary">View Shop Cart</button>
         </div>
       </div>
