--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,4 +1,4 @@
-<h2>{{ currentShop.shopName }}</h2>
+<h2>{{ currentShop.name }}</h2>
 <br /><hr />
 
 <div class="clr-row clr-col-12">
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="card-footer clr-col-12">
-          <button class="btn btn-sm btn-primary">Add to Cart</button>
+          <button class="btn btn-sm btn-primary" (click)="addToCart(item)">Add to Cart</button>
         </div>
       </div>
     </div>
