Adds carts ability

--- a/src/app/best-deal/best-deal.component.html
+++ b/src/app/best-deal/best-deal.component.html
@@ -16,7 +16,7 @@
           </div>
       </div>
       <div class="card-footer clr-col-12">
-        <button class="btn btn-sm btn-primary">Add to Cart</button>
+        <button class="btn btn-sm btn-primary" (click)="addToCart(item)">Add to Cart</button>
       </div>
     </div>
   </div>
