Impl write component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,10 @@
         <cds-icon clrVerticalNavIcon shape="search"></cds-icon>
         Search Result
       </a> -->
+      <a clrVerticalNavLink routerLink="/write" routerLinkActive="active">
+        <cds-icon clrVerticalNavIcon shape="pinboard"></cds-icon>
+        Post a Comment
+      </a>
       <a clrVerticalNavLink routerLink="/faqBoard" routerLinkActive="active">
         <cds-icon clrVerticalNavIcon shape="pinboard"></cds-icon>
         FAQs
