--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -16,6 +16,7 @@
         </div>
         <div class="card-footer clr-col-12">
           <button class="btn btn-sm btn-primary" (click)="addToCart(item)">Add to Cart</button>
+          <button class="btn btn-sm btn-primary" (click)="goToCart()">View Shop Cart</button>
         </div>
       </div>
     </div>
