--- a/src/app/shop/shop.component.css
+++ b/src/app/shop/shop.component.css
@@ -25,5 +25,6 @@
 
 .event{
     text-align: center; 
-    background-color: yellow;
+    padding: 5px 0 5px 0;
+    background-color: rgb(252, 252, 157);
 }
