--- a/src/app/best-deal/best-deal.component.css
+++ b/src/app/best-deal/best-deal.component.css
@@ -30,5 +30,6 @@
 
 .event{
     text-align: center; 
-    background-color: lightcoral;
+    padding: 5px 0 5px 0;
+    background-color: rgb(244, 244, 159);
 }
