--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,8 +1,22 @@
 <h2>{{ currentShop.name }} Cart</h2>
 <br /><hr />
 
-<div class="clr-row clr-col-12" *ngIf="currentShop.name">
+<div class="clr-row clr-col-12" *ngIf="!countShops">
   <div class="clr-col-12">
+    <div class="card">
+      <h3 class="card-header">Cart is currently empty.</h3>
+    </div>
+  </div>
+</div>
+
+<div class="clr-row clr-col-12" *ngIf="singleShopView || (countShops==1)">
+  <div class="clr-col-12">
+
+    <div class="clr-col-12 flex" *ngIf="singleShopView">
+      <div class="clr-col-9"></div>
+      <div class="clr-col-3 btn-top-menu"><button class="btn btn-sm btn-primary" (click)="seeAllShopsCart()">See Carts of All Shops</button></div>
+    </div>
+
     <div class="card">
       <h3 class="card-header">Shopped at {{ currentShop.name }}</h3>
 
@@ -41,10 +55,30 @@
   </div>
 </div>
 
-<div class="clr-row clr-col-12" *ngIf="!currentShop.name">
+<div class="clr-row clr-col-12" *ngIf="!singleShopView && countShops>1">
   <div class="clr-col-12">
     <div class="card">
-      <h3 class="card-header">Cart is currently empty.</h3>
+      <h3 class="card-header">You have {{ countShops }} Store Carts. Select one to View.</h3>
+
+      <div class="clr-row clr-col-12">
+        <div class="clr-col-3" *ngFor="let basket of sessionData.carts">
+          <div class="card" (click)="showSingleViewCart(basket)">
+            <h3 class="card-header">{{ basket.store.name }}</h3>
+            <div class="card-block flex clr-col-12">
+                <div class="card-text"><img [src]="basket.store.image" class="image" /></div>
+                <div class="card-text card-right">
+                  <span class="card-title" *ngIf="basket.store.address">Located at {{ basket.store.address }}</span>
+                  <div *ngIf="basket.store.openUntil"><i>Open until {{ basket.store.openUntil | date: 'shortTime'}}</i></div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card-block clr-col-12 flex">
+        <div class="clr-col-12"></div>
+      </div>
+     
     </div>
   </div>
 </div>
