Adds costomized free form text editor

--- a/src/app/write/write.component.html
+++ b/src/app/write/write.component.html
@@ -19,6 +19,7 @@
                             (onEditorChanged)="changedEditor($event)"
                             (onBlur)="blur($event)" 
                             (onEditorCreated)="created($event)"
+                            (keydown)="onKeyDown($event)"
                         >
 
                         <div quill-editor-toolbar>
